ansible/ressources/k8s/dashboard/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - name: kong
    sectionName: proxy
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /dashboard
    backendRefs:
    - name: kubernetes-dashboard-web
      namespace: kubernetes-dashboard 
      port: 8000
