ansible/ressources/k8s/dashboard/tlsroute.yml
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: http-kubernetes-dashboard
#   namespace: kubernetes-dashboard
# spec:
#   parentRefs:
#   - name: kong
#     kind: Gateway
#     namespace: default
#     sectionName: proxy
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /dashboard
#     filters:
#     - type: URLRewrite
#       urlRewrite:
#         path:
#           type: ReplacePrefixMatch
#           replacePrefixMatch: /
#     backendRefs:
#     - name: kubernetes-dashboard-kong-proxy
#       kind: Service
#       port: 80
#       namespace: kubernetes-dashboard

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: http-kubernetes-dashboard
  namespace: kubewall-system
spec:
  parentRefs:
  - name: kong
    kind: Gateway
    namespace: default
    sectionName: proxy
  hostnames:
   - otterstack.dashboard.local
  rules:  # Correct placement for backendRefs
  - backendRefs:
    - name: kubewall
      kind: Service
      port: 8443
      namespace: kubewall-system
